@@ -22,6 +22,8 @@ Changes for 1.7.0
 
 Changes for 1.6.2
 
+ - [DEV-268] added support of system.boottime under Solaris (Sasha)
+ - [DEV-268] added support of system.cpu.load under Solaris 2.6 (Sasha)
  - [ZBX-650] DM: fixed memory leak in synchronization of node configuration (Sasha)
  - [ZBX-650] fixed rare race condition in DBimplode_exp (Sasha)
  - [ZBX-650] fixed cleanup of open file descriptor (Sasha)
